--- a/pozo_finito.ipynb
+++ b/pozo_finito.ipynb
@@ -152,11 +152,11 @@
     "                 a=widgets.FloatSlider(min=0.5, max=2.0, step=0.01, value=1.39, description=r'$a [Å]$'),\n",
     "                 d=widgets.FloatSlider(min=0.0, max=0.5, step=0.1, value=0.0, description=r'$d$'))\n",
     "\n",
-    "#widgets.interact(interactive_fit, dE5=widgets.BoundedFloatText(min=0.1, max=10.0, step=0.001, value=2.50, description=r'$\\Delta E_{4 \\rightarrow 5} [eV] (p=5)$', readout_format='.3f'),\n",
-    "#                 dE7=widgets.BoundedFloatText(min=0.1, max=10.0, step=0.001, value=2.1, description=r'$\\Delta E_{5 \\rightarrow 6} [eV] (p=7)$', readout_format='.3f'),\n",
-    "#                 dE9=widgets.BoundedFloatText(min=0.1, max=10.0, step=0.001, value=1.8, description=r'$\\Delta E_{6 \\rightarrow 7} [eV] (p=9)$', readout_format='.3f'),\n",
-    "#                 Vmin=widgets.BoundedFloatText(min=1.0, max=20.0, step=0.1, value=8.0, description=r'$V_{min} [eV]$'),\n",
-    "#                 Vmax=widgets.BoundedFloatText(min=1.0, max=20.0, step=0.1, value=12.0, description=r'$V_{max} [eV]$'))"
+    "widgets.interact(interactive_fit, dE5=widgets.BoundedFloatText(min=0.1, max=10.0, step=0.001, value=2.50, description=r'$\\Delta E_{4 \\rightarrow 5} [eV] (p=5)$', readout_format='.3f'),\n",
+    "                 dE7=widgets.BoundedFloatText(min=0.1, max=10.0, step=0.001, value=2.1, description=r'$\\Delta E_{5 \\rightarrow 6} [eV] (p=7)$', readout_format='.3f'),\n",
+    "                 dE9=widgets.BoundedFloatText(min=0.1, max=10.0, step=0.001, value=1.8, description=r'$\\Delta E_{6 \\rightarrow 7} [eV] (p=9)$', readout_format='.3f'),\n",
+    "                 Vmin=widgets.BoundedFloatText(min=1.0, max=20.0, step=0.1, value=8.0, description=r'$V_{min} [eV]$'),\n",
+    "                 Vmax=widgets.BoundedFloatText(min=1.0, max=20.0, step=0.1, value=12.0, description=r'$V_{max} [eV]$'))"
    ]
   },
   {
